# Bomb-Fishing

./: README.md  pyproject.toml
archive/: README.md  bomb-detector-env.yml
archive/misc/: acoustic_localization_notebook.ipynb  fix_audio_timestamps.py  fix_csv_timestamps.py  results_plotting.ipynb
archive/model_deployment/: batch_runner.py  child_script.py  parent_script.py  run_inference.py
archive/model_training/: 1_preprocessing_audio.ipynb  2_augmentations.ipynb  3_feature_extraction.ipynb  4_autokeras.ipynb  5_evalutating_performance.ipynb  6_inference.ipynb
inference/: README.md  inference_child.py  inference_parent.py
misc/: combine_pickle_files.py  count_bombs.py  count_yb_files.py
models/: README.md
models/legacy_model/: keras_metadata.pb  saved_model.pb
models/legacy_model/variables/: variables.data-00000-of-00001  variables.index
retraining_scripts/: QUICK_START.md  README.md  apply_augmentation.py  create_train_test_split.py  data_preprocessing.py  extract_features.py  run_complete_pipeline.py  train_model.py
